fix spacing

--- a/src/css/components/episode-content.scss
+++ b/src/css/components/episode-content.scss
@@ -48,10 +48,6 @@
     }
   }
 
-  .links {
-    margin-top: -$spacing-4;
-  }
-
   blockquote {
     font-size: 2rem;
     line-height: 2.6rem;
